refactor: improve usage of winston logger overide, remove start.js file and logger.js file used for override

--- a/.env.example
+++ b/.env.example
@@ -16,5 +16,5 @@ AUTH_SECRET='supersecret'
 
 TURBO_TELEMETRY_DISABLED=1
 
-# This is temporary to use winston logger, I'll find a better way to do this
-NODE_OPTIONS='-r ./logger.js'
+# Configure logging to use winston logger
+NODE_OPTIONS='-r @homarr/log/override'
