feat: add winston logger (#143)
* feat: add winston logger

* refactor: improve usage of winston logger overide, remove start.js file and logger.js file used for override

* fix: formatting

* fix: formatting

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,6 @@ AUTH_URL='http://localhost:3000'
 AUTH_SECRET='supersecret'
 
 TURBO_TELEMETRY_DISABLED=1
+
+# Configure logging to use winston logger
+NODE_OPTIONS='-r @homarr/log/override'
