--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -20,6 +20,7 @@
     "@homarr/definitions": "workspace:^0.1.0",
     "@homarr/form": "workspace:^0.1.0",
     "@homarr/gridstack": "^1.0.0",
+    "@homarr/log": "workspace:^",
     "@homarr/notifications": "workspace:^0.1.0",
     "@homarr/spotlight": "workspace:^0.1.0",
     "@homarr/translation": "workspace:^0.1.0",
