--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "db:push": "pnpm -F db push",
     "db:studio": "pnpm -F db studio",
     "db:migration:generate": "pnpm -F db migration:generate",
-    "dev": "node start.js",
+    "dev": "turbo dev --parallel",
     "format": "turbo format --continue -- --cache --cache-location node_modules/.cache/.prettiercache",
     "format:fix": "turbo format --continue -- --write --cache --cache-location node_modules/.cache/.prettiercache",
     "lint": "turbo lint --continue -- --cache --cache-location node_modules/.cache/.eslintcache",
@@ -38,8 +38,5 @@
     "vite-tsconfig-paths": "^4.3.1",
     "vitest": "^1.3.1"
   },
-  "prettier": "@homarr/prettier-config",
-  "dependencies": {
-    "winston": "^3.11.0"
-  }
+  "prettier": "@homarr/prettier-config"
 }
