fix: issue with invalid hex values for color preview

--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -61,6 +61,7 @@
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
+    "@types/chroma-js": "2.4.4",
     "dotenv-cli": "^7.3.0",
     "eslint": "^8.56.0",
     "prettier": "^3.2.5",
