--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@homarr/db",
   "version": "0.1.0",
+  "type": "module",
   "exports": {
     ".": "./index.ts",
     "./client": "./client.ts",
