--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -1,63 +1,57 @@
 {
   "name": "@homarr/nest",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "version": "0.1.0",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "dev": "pnpm with-env vite",
     "prebuild": "rimraf dist",
     "build": "vite build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "clean": "rm -rf .turbo node_modules",
+    "lint": "eslint .",
+    "format": "prettier --check . --ignore-path ../../.gitignore",
+    "typecheck": "tsc --noEmit",
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
     "@homarr/db": "workspace:^0.1.0",
     "@homarr/log": "workspace:^0.1.0",
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/common": "^10.3.3",
+    "@nestjs/core": "^10.3.3",
+    "@nestjs/platform-express": "^10.3.3",
     "nest-winston": "^1.9.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
-    "@homarr/eslint-config": "workspace:^",
-    "@homarr/prettier-config": "workspace:^",
-    "@homarr/tsconfig": "workspace:^",
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
+    "@homarr/eslint-config": "workspace:^0.2.0",
+    "@homarr/prettier-config": "workspace:^0.1.0",
+    "@homarr/tsconfig": "workspace:^0.1.0",
+    "@nestjs/cli": "^10.3.2",
+    "@nestjs/schematics": "^10.1.1",
+    "@nestjs/testing": "^10.3.3",
     "@swc/core": "^1.2.155",
     "@types/express": "^4.17.13",
-    "@types/node": "^16.0.0",
+    "@types/node": "^20.11.24",
     "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.23.0",
-    "@typescript-eslint/parser": "^5.23.0",
-    "eslint": "^7.30.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "prettier": "^2.3.2",
+    "eslint": "^8.57.0",
+    "prettier": "^3.2.5",
     "supertest": "^6.1.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5",
+    "typescript": "^5.3.3",
     "vite": "^4.0.4",
     "vite-plugin-node": "^3.1.0"
   },
   "eslintConfig": {
     "root": true,
     "extends": [
-      "@homarr/eslint-config/base",
-      "@homarr/eslint-config/nextjs",
-      "@homarr/eslint-config/react"
+      "@homarr/eslint-config/base"
     ]
   },
   "prettier": "@homarr/prettier-config"
