--- a/apps/nestjs/tsconfig.json
+++ b/apps/nestjs/tsconfig.json
@@ -6,11 +6,14 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "strictNullChecks": true,
     "target": "es2017",
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": ".",
     "incremental": true,
     "skipLibCheck": true
-  }
+  },
+  "include": ["src/**/*", "vite.config.ts"]
 }
