--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -53,7 +53,8 @@
     "react-dom": "18.2.0",
     "sass": "^1.72.0",
     "superjson": "2.2.1",
-    "use-deep-compare-effect": "^1.8.1"
+    "use-deep-compare-effect": "^1.8.1",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
