--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "exports": {
     ".": "./src/index.ts",
-    "./client": "./src/client.ts"
+    "./client": "./src/client.ts",
+    "./server": "./src/server.ts"
   },
   "private": true,
   "main": "./index.ts",
