feat: add mysql support

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -26,7 +26,8 @@
     "@homarr/definitions": "workspace:^0.1.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "better-sqlite3": "^9.4.3",
-    "drizzle-orm": "^0.29.4"
+    "drizzle-orm": "^0.29.4",
+    "mysql2": "^3.9.2"
   },
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
