--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@homarr/auth",
   "version": "0.1.0",
+  "type": "module",
   "exports": {
     ".": "./index.ts",
     "./security": "./security.ts",
