--- a/packages/definitions/package.json
+++ b/packages/definitions/package.json
@@ -2,6 +2,7 @@
   "name": "@homarr/definitions",
   "private": true,
   "version": "0.1.0",
+  "type": "module",
   "exports": {
     ".": "./index.ts"
   },
