--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "db:push": "pnpm -F db push",
     "db:studio": "pnpm -F db studio",
     "db:migration:generate": "pnpm -F db migration:generate",
+    "db:migration:run": "pnpm -F db migration:run",
     "dev": "turbo dev --parallel",
     "format": "turbo format --continue -- --cache --cache-location node_modules/.cache/.prettiercache",
     "format:fix": "turbo format --continue -- --write --cache --cache-location node_modules/.cache/.prettiercache",
