--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -17,6 +17,7 @@
     "lint": "eslint .",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "migration:generate": "drizzle-kit generate:sqlite",
+    "migration:run": "node ./migrate.mjs",
     "push": "drizzle-kit push:sqlite",
     "studio": "drizzle-kit studio",
     "typecheck": "tsc --noEmit"
@@ -27,7 +28,8 @@
     "@paralleldrive/cuid2": "^2.2.2",
     "better-sqlite3": "^9.4.3",
     "drizzle-orm": "^0.30.2",
-    "mysql2": "^3.9.2"
+    "mysql2": "^3.9.2",
+    "drizzle-kit": "^0.20.14"
   },
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
@@ -35,7 +37,6 @@
     "@homarr/tsconfig": "workspace:^0.1.0",
     "@types/better-sqlite3": "7.6.9",
     "dotenv-cli": "^7.4.1",
-    "drizzle-kit": "^0.20.14",
     "eslint": "^8.57.0",
     "prettier": "^3.2.5",
     "typescript": "^5.4.2"
