--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -26,7 +26,9 @@
     "nest-winston": "^1.9.4",
     "reflect-metadata": "^0.2.1",
     "rimraf": "^5.0.5",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "vite": "^5.1.6",
+    "vite-plugin-node": "^3.1.0"
   },
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
@@ -44,9 +46,7 @@
     "supertest": "^6.3.4",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.4.2",
-    "vite": "^5.1.6",
-    "vite-plugin-node": "^3.1.0"
+    "typescript": "^5.4.2"
   },
   "eslintConfig": {
     "root": true,
