--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -27,6 +27,7 @@
     "reflect-metadata": "^0.2.1",
     "rimraf": "^5.0.5",
     "rxjs": "^7.8.1",
+    "sharp": "^0.33.2",
     "vite": "^5.1.6",
     "vite-plugin-node": "^3.1.0"
   },
