--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -21,6 +21,7 @@
     "@homarr/form": "workspace:^0.1.0",
     "@homarr/gridstack": "^1.0.0",
     "@homarr/log": "workspace:^",
+    "@homarr/modals": "workspace:^0.1.0",
     "@homarr/notifications": "workspace:^0.1.0",
     "@homarr/spotlight": "workspace:^0.1.0",
     "@homarr/translation": "workspace:^0.1.0",
