--- a/packages/widgets/package.json
+++ b/packages/widgets/package.json
@@ -37,6 +37,7 @@
     "@homarr/definitions": "workspace:^0.1.0",
     "@homarr/form": "workspace:^0.1.0",
     "@homarr/api": "workspace:^0.1.0",
+    "@homarr/modals": "workspace:^0.1.0",
     "@homarr/notifications": "workspace:^0.1.0",
     "@homarr/translation": "workspace:^0.1.0",
     "@homarr/ui": "workspace:^0.1.0",
