--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -22,6 +22,7 @@
     "@homarr/form": "workspace:^0.1.0",
     "@homarr/gridstack": "^1.0.0",
     "@homarr/log": "workspace:^",
+    "@homarr/modals": "workspace:^0.1.0",
     "@homarr/notifications": "workspace:^0.1.0",
     "@homarr/spotlight": "workspace:^0.1.0",
     "@homarr/translation": "workspace:^0.1.0",
@@ -46,7 +47,6 @@
     "chroma-js": "^2.4.2",
     "dayjs": "^1.11.10",
     "jotai": "^2.7.1",
-    "mantine-modal-manager": "^7.6.2",
     "next": "^14.1.3",
     "postcss-preset-mantine": "^1.13.0",
     "react": "18.2.0",
