--- a/packages/redis/package.json
+++ b/packages/redis/package.json
@@ -13,6 +13,7 @@
     }
   },
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "clean": "rm -rf .turbo node_modules",
     "lint": "eslint .",
@@ -20,14 +21,15 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "ioredis": "5.3.2"
+    "ioredis": "5.3.2",
+    "@homarr/log": "workspace:^"
   },
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
     "@homarr/prettier-config": "workspace:^0.1.0",
     "@homarr/tsconfig": "workspace:^0.1.0",
     "eslint": "^8.57.0",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.3"
   },
   "eslintConfig": {
     "extends": [
