--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -46,6 +46,7 @@
     "@trpc/server": "next",
     "chroma-js": "^2.4.2",
     "dayjs": "^1.11.10",
+    "dotenv": "^16.4.5",
     "jotai": "^2.7.1",
     "next": "^14.1.4",
     "postcss-preset-mantine": "^1.13.0",
@@ -54,18 +55,18 @@
     "sass": "^1.72.0",
     "superjson": "2.2.1",
     "use-deep-compare-effect": "^1.8.1",
-    "dotenv": "^16.4.5"
+    "xterm": "^5.3.0"
   },
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
     "@homarr/prettier-config": "workspace:^0.1.0",
     "@homarr/tsconfig": "workspace:^0.1.0",
+    "@types/chroma-js": "2.4.4",
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.70",
     "@types/react-dom": "^18.2.22",
-    "@types/chroma-js": "2.4.4",
-    "dotenv-cli": "^7.4.1",
     "concurrently": "^8.2.2",
+    "dotenv-cli": "^7.4.1",
     "eslint": "^8.57.0",
     "prettier": "^3.2.5",
     "tsx": "^4.7.1",
