--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -44,6 +44,9 @@
     "@trpc/next": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "@xterm/addon-canvas": "^0.6.0",
+    "@xterm/addon-fit": "^0.9.0",
+    "@xterm/xterm": "^5.4.0",
     "chroma-js": "^2.4.2",
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
@@ -54,8 +57,7 @@
     "react-dom": "18.2.0",
     "sass": "^1.72.0",
     "superjson": "2.2.1",
-    "use-deep-compare-effect": "^1.8.1",
-    "xterm": "^5.3.0"
+    "use-deep-compare-effect": "^1.8.1"
   },
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
