--- a/packages/redis/package.json
+++ b/packages/redis/package.json
@@ -22,7 +22,9 @@
   },
   "dependencies": {
     "ioredis": "5.3.2",
-    "@homarr/log": "workspace:^"
+    "@homarr/log": "workspace:^",
+    "@homarr/db": "workspace:^",
+    "@homarr/common": "workspace:^"
   },
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
