--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "db:migration:generate": "pnpm -F db migration:generate",
     "db:migration:run": "pnpm -F db migration:run",
     "dev": "turbo dev --parallel",
+    "docker:dev": "docker compose -f ./development.docker-compose.yml up",
     "format": "turbo format --continue -- --cache --cache-location node_modules/.cache/.prettiercache",
     "format:fix": "turbo format --continue -- --write --cache --cache-location node_modules/.cache/.prettiercache",
     "lint": "turbo lint --continue -- --cache --cache-location node_modules/.cache/.eslintcache",
