--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -4,7 +4,8 @@
   "version": "0.1.0",
   "type": "module",
   "exports": {
-    ".": "./index.ts"
+    ".": "./index.ts",
+    "./types": "./src/types.ts"
   },
   "typesVersions": {
     "*": {
