--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -28,7 +28,7 @@
     "@paralleldrive/cuid2": "^2.2.2",
     "better-sqlite3": "^9.4.3",
     "drizzle-orm": "^0.30.6",
-    "mysql2": "^3.9.3",
+    "mysql2": "3.9.2",
     "drizzle-kit": "^0.20.14"
   },
   "devDependencies": {
