--- a/packages/widgets/package.json
+++ b/packages/widgets/package.json
@@ -42,6 +42,21 @@
     "@homarr/redis": "workspace:^0.1.0",
     "@homarr/translation": "workspace:^0.1.0",
     "@homarr/ui": "workspace:^0.1.0",
-    "@homarr/validation": "workspace:^0.1.0"
+    "@homarr/validation": "workspace:^0.1.0",
+    "@tiptap/extension-link": "^2.2.6",
+    "@tiptap/react": "^2.2.6",
+    "@tiptap/starter-kit": "^2.2.6",
+    "@tiptap/extension-color": "2.2.6",
+    "@tiptap/extension-highlight": "2.2.6",
+    "@tiptap/extension-image": "2.2.6",
+    "@tiptap/extension-table": "2.2.6",
+    "@tiptap/extension-table-cell": "2.2.6",
+    "@tiptap/extension-table-header": "2.2.6",
+    "@tiptap/extension-table-row": "2.2.6",
+    "@tiptap/extension-task-item": "2.2.6",
+    "@tiptap/extension-task-list": "2.2.6",
+    "@tiptap/extension-text-align": "2.2.6",
+    "@tiptap/extension-text-style": "2.2.6",
+    "@tiptap/extension-underline": "2.2.6"
   }
 }
