--- a/packages/widgets/package.json
+++ b/packages/widgets/package.json
@@ -45,6 +45,21 @@
     "@homarr/translation": "workspace:^0.1.0",
     "@homarr/ui": "workspace:^0.1.0",
     "@homarr/validation": "workspace:^0.1.0",
+    "@tiptap/extension-link": "^2.2.5",
+    "@tiptap/react": "^2.2.5",
+    "@tiptap/starter-kit": "^2.2.5",
+    "@tiptap/extension-color": "2.2.5",
+    "@tiptap/extension-highlight": "2.2.5",
+    "@tiptap/extension-image": "2.2.5",
+    "@tiptap/extension-table": "2.2.5",
+    "@tiptap/extension-table-cell": "2.2.5",
+    "@tiptap/extension-table-header": "2.2.5",
+    "@tiptap/extension-table-row": "2.2.5",
+    "@tiptap/extension-task-item": "2.2.5",
+    "@tiptap/extension-task-list": "2.2.5",
+    "@tiptap/extension-text-align": "2.2.5",
+    "@tiptap/extension-text-style": "2.2.5",
+    "@tiptap/extension-underline": "2.2.5",
     "video.js": "^8.10.0"
   }
 }
