--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "devDependencies": {
     "@homarr/prettier-config": "workspace:^0.1.0",
-    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/react": "^15.0.5",
     "@turbo/gen": "^1.13.2",
     "@vitejs/plugin-react": "^4.2.1",
     "@vitest/coverage-v8": "^1.5.2",
