--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "build": "esbuild migrate.ts --bundle --platform=node --outfile=migrate.cjs",
     "clean": "rm -rf .turbo node_modules",
-    "lint": "eslint .",
+    "lint": "eslint",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "migration:generate": "drizzle-kit generate:sqlite",
     "migration:run": "tsx ./migrate.ts",
@@ -33,7 +33,7 @@
     "drizzle-kit": "^0.20.17"
   },
   "devDependencies": {
-    "@homarr/eslint-config": "workspace:^0.2.0",
+    "@homarr/eslint-config": "workspace:^0.3.0",
     "@homarr/prettier-config": "workspace:^0.1.0",
     "@homarr/tsconfig": "workspace:^0.1.0",
     "@types/better-sqlite3": "7.6.9",
@@ -41,12 +41,6 @@
     "eslint": "^9.1.1",
     "prettier": "^3.2.5",
     "typescript": "^5.4.5"
-  },
-  "eslintConfig": {
-    "root": true,
-    "extends": [
-      "@homarr/eslint-config/base"
-    ]
   },
   "prettier": "@homarr/prettier-config"
 }
