--- a/packages/notifications/package.json
+++ b/packages/notifications/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@homarr/notifications",
   "private": true,
+  "type": "module",
   "version": "0.1.0",
   "exports": {
     ".": "./index.ts",
@@ -16,12 +17,12 @@
   "license": "MIT",
   "scripts": {
     "clean": "rm -rf .turbo node_modules",
-    "lint": "eslint .",
+    "lint": "eslint",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@homarr/eslint-config": "workspace:^0.2.0",
+    "@homarr/eslint-config": "workspace:^0.3.0",
     "@homarr/prettier-config": "workspace:^0.1.0",
     "@homarr/tsconfig": "workspace:^0.1.0",
     "eslint": "^9.1.1",
@@ -30,11 +31,6 @@
   "dependencies": {
     "@mantine/notifications": "^7.8.0",
     "@homarr/ui": "workspace:^0.1.0"
-  },
-  "eslintConfig": {
-    "extends": [
-      "@homarr/eslint-config/base"
-    ]
   },
   "prettier": "@homarr/prettier-config"
 }
