--- a/tooling/eslint/package.json
+++ b/tooling/eslint/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@homarr/eslint-config",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "private": true,
-  "license": "MIT",
-  "files": [
-    "./base.js",
-    "./nextjs.js",
-    "./react.js"
-  ],
+  "type": "module",
+  "exports": {
+    "./base": "./base.js",
+    "./nextjs": "./nextjs.js",
+    "./react": "./react.js"
+  },
   "scripts": {
     "clean": "rm -rf .turbo node_modules",
     "lint": "eslint .",
@@ -16,9 +16,7 @@
   },
   "dependencies": {
     "@next/eslint-plugin-next": "^14.2.3",
-    "@typescript-eslint/eslint-plugin": "^7.7.1",
-    "@typescript-eslint/parser": "^7.7.1",
-    "eslint-config-prettier": "^9.1.0",
+    "typescript-eslint": "^7.6.0",
     "eslint-config-turbo": "^1.13.2",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
@@ -26,17 +24,10 @@
     "eslint-plugin-react-hooks": "^4.6.2"
   },
   "devDependencies": {
-    "@types/eslint": "^8.56.10",
     "@homarr/prettier-config": "workspace:^0.1.0",
     "@homarr/tsconfig": "workspace:^0.1.0",
     "eslint": "^9.1.1",
     "typescript": "^5.4.5"
-  },
-  "eslintConfig": {
-    "root": true,
-    "extends": [
-      "./base.js"
-    ]
   },
   "prettier": "@homarr/prettier-config"
 }
