--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -47,6 +47,7 @@
     "chroma-js": "^2.4.2",
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
+    "glob": "^10.3.12",
     "jotai": "^2.8.0",
     "next": "^14.2.3",
     "postcss-preset-mantine": "^1.15.0",
@@ -60,10 +61,10 @@
     "@homarr/eslint-config": "workspace:^0.2.0",
     "@homarr/prettier-config": "workspace:^0.1.0",
     "@homarr/tsconfig": "workspace:^0.1.0",
+    "@types/chroma-js": "2.4.4",
     "@types/node": "^20.12.7",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
-    "@types/chroma-js": "2.4.4",
     "concurrently": "^8.2.2",
     "eslint": "^8.57.0",
     "prettier": "^3.2.5",
