feat: add mysql migration and fix merge conflicts

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "clean:workspaces": "turbo clean",
     "db:push": "pnpm -F db push",
     "db:studio": "pnpm -F db studio",
-    "db:migration:generate": "pnpm -F db migration:generate",
+    "db:migration:sqlite:generate": "pnpm -F db migration:sqlite:generate",
+    "db:migration:mysql:generate": "pnpm -F db migration:mysql:generate",
     "db:migration:run": "pnpm -F db migration:run",
     "dev": "turbo dev --parallel",
     "docker:dev": "docker compose -f ./development.docker-compose.yml up",
