--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "db:migration:mysql:generate": "pnpm -F db migration:mysql:generate",
     "db:migration:run": "pnpm -F db migration:run",
     "dev": "turbo dev --parallel",
-    "docker:dev": "docker compose -f ./development.docker-compose.yml up",
+    "docker:dev": "docker compose -f ./dev/development.docker-compose.yml up",
     "format": "turbo format --continue -- --cache --cache-location node_modules/.cache/.prettiercache",
     "format:fix": "turbo format --continue -- --write --cache --cache-location node_modules/.cache/.prettiercache",
     "lint": "turbo lint --continue -- --cache --cache-location node_modules/.cache/.eslintcache",
