--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "exports": {
     ".": "./index.ts",
+    "./next": "./next.ts",
     "./security": "./security.ts",
     "./client": "./client.ts",
     "./shared": "./shared.ts",
