feat: #420 reimplement icon picker

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -21,7 +21,7 @@
     "migration:run": "tsx ./migrate.ts",
     "migration:mysql:generate": "drizzle-kit generate:mysql --config ./mysql.config.ts",
     "push": "drizzle-kit push:sqlite --config ./sqlite.config.ts",
-    "studio": "drizzle-kit studio --config ./sqlite.config.ts",
+    "studio": "drizzle-kit studio",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
