--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@homarr/common": "workspace:^0.1.0",
     "@homarr/definitions": "workspace:^0.1.0",
+    "@homarr/log": "workspace:^0.1.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "better-sqlite3": "^9.6.0",
     "drizzle-orm": "^0.30.10",
