fix: migrate to drizzle kit 0.21

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "db:studio": "pnpm -F db studio",
     "db:migration:sqlite:generate": "pnpm -F db migration:sqlite:generate",
     "db:migration:mysql:generate": "pnpm -F db migration:mysql:generate",
-    "db:migration:run": "pnpm -F db migration:run",
+    "db:migration:sqlite:run": "pnpm -F db migration:sqlite:run",
+    "db:migration:mysql:run": "pnpm -F db migration:mysql:run",
     "dev": "turbo dev --parallel",
     "docker:dev": "docker compose -f ./development/development.docker-compose.yml up",
     "format": "turbo format --continue -- --cache --cache-location node_modules/.cache/.prettiercache",
