--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "lint:ws": "pnpm dlx sherif@latest",
     "test": "cross-env NODE_ENV=development vitest run --coverage.enabled",
     "test:ui": "cross-env NODE_ENV=development vitest --ui --coverage.enabled",
-    "typecheck": "turbo typecheck"
+    "typecheck": "turbo typecheck",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@homarr/prettier-config": "workspace:^0.1.0",
@@ -43,6 +44,7 @@
     "@mantine/core": "^7.9.1",
     "@mantine/dates": "^7.9.1",
     "@tabler/icons-react": "^3.3.0",
+    "husky": "^9.0.11",
     "mantine-react-table": "2.0.0-beta.1"
   },
   "prettier": "@homarr/prettier-config"
