--- a/packages/redis/redis.conf
+++ b/packages/redis/redis.conf
@@ -1,5 +1,5 @@
 # Directory to store dump.rdb
-dir /app/redis
+dir /appdata/redis
 
 # Save the data to disk every 60 seconds if at least 1 key changed
 save 60 1
