--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -55,6 +55,7 @@
     "dayjs": "^1.11.12",
     "dotenv": "^16.4.5",
     "flag-icons": "^7.2.3",
+    "nextjs-cors": "^2.2.0",
     "glob": "^11.0.0",
     "jotai": "^2.9.1",
     "mantine-react-table": "2.0.0-beta.6",
@@ -67,6 +68,7 @@
     "react-simple-code-editor": "^0.14.1",
     "sass": "^1.77.8",
     "superjson": "2.2.1",
+    "swagger-ui-react": "^5.17.7",
     "use-deep-compare-effect": "^1.8.1"
   },
   "devDependencies": {
@@ -78,6 +80,7 @@
     "@types/prismjs": "^1.26.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/swagger-ui-react": "^4.18.3",
     "concurrently": "^8.2.2",
     "eslint": "^9.8.0",
     "node-loader": "^2.0.0",
