--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -37,6 +37,7 @@
     "@trpc/server": "next",
     "dockerode": "^4.0.2",
     "superjson": "2.2.1",
+    "trpc-swagger": "^1.2.3",
     "next": "^14.2.5",
     "react": "^18.3.1"
   },
