--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -47,6 +47,7 @@
     "chroma-js": "^2.4.2",
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
+    "flag-icons": "^7.2.1",
     "glob": "^10.3.15",
     "jotai": "^2.8.0",
     "next": "^14.2.3",
