--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -21,25 +21,28 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@homarr/db": "workspace:^0.1.0",
     "@auth/core": "^0.31.0",
     "@auth/drizzle-adapter": "^1.1.0",
+    "@homarr/db": "workspace:^0.1.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "bcrypt": "^5.1.1",
     "cookies": "^0.9.1",
+    "ldapjs": "^3.0.7",
     "next": "^14.2.3",
     "next-auth": "5.0.0-beta.18",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@homarr/definitions": "workspace:^0.1.0",
     "@homarr/eslint-config": "workspace:^0.2.0",
+    "@homarr/log": "workspace:^0.1.0",
     "@homarr/prettier-config": "workspace:^0.1.0",
     "@homarr/tsconfig": "workspace:^0.1.0",
     "@homarr/validation": "workspace:^0.1.0",
-    "@homarr/definitions": "workspace:^0.1.0",
     "@types/bcrypt": "5.0.2",
     "@types/cookies": "0.9.0",
+    "@types/ldapjs": "^3.0.6",
     "eslint": "^8.57.0",
     "prettier": "^3.2.5",
     "typescript": "^5.4.5"
