--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "turbo build",
     "clean": "git clean -xdf node_modules",
     "clean:workspaces": "turbo clean",
-    "db:push": "pnpm -F db push",
+    "db:push": "pnpm -F db push:sqlite",
     "db:studio": "pnpm -F db studio",
     "db:migration:sqlite:generate": "pnpm -F db migration:sqlite:generate",
     "db:migration:mysql:generate": "pnpm -F db migration:mysql:generate",
