--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -25,7 +25,7 @@
     "migration:mysql:run": "drizzle-kit migrate --config ./configs/mysql.config.ts",
     "push:sqlite": "drizzle-kit push --config ./configs/sqlite.config.ts",
     "push:mysql": "drizzle-kit push --config ./configs/mysql.config.ts",
-    "studio": "drizzle-kit studio",
+    "studio": "drizzle-kit studio --config ./configs/sqlite.config.ts",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
