--- a/packages/widgets/package.json
+++ b/packages/widgets/package.json
@@ -23,6 +23,7 @@
     "@homarr/eslint-config": "workspace:^0.2.0",
     "@homarr/prettier-config": "workspace:^0.1.0",
     "@homarr/tsconfig": "workspace:^0.1.0",
+    "@types/prismjs": "^1.26.4",
     "@types/video.js": "^7.3.58",
     "eslint": "^8.57.0",
     "typescript": "^5.4.5"
@@ -40,17 +41,15 @@
     "@homarr/form": "workspace:^0.1.0",
     "@homarr/modals": "workspace:^0.1.0",
     "@homarr/notifications": "workspace:^0.1.0",
-    "@homarr/spotlight": "workspace:^0.1.0",
     "@homarr/redis": "workspace:^0.1.0",
+    "@homarr/spotlight": "workspace:^0.1.0",
     "@homarr/translation": "workspace:^0.1.0",
     "@homarr/ui": "workspace:^0.1.0",
     "@homarr/validation": "workspace:^0.1.0",
-    "@tiptap/extension-link": "^2.4.0",
-    "@tiptap/react": "^2.4.0",
-    "@tiptap/starter-kit": "^2.4.0",
     "@tiptap/extension-color": "2.4.0",
     "@tiptap/extension-highlight": "2.4.0",
     "@tiptap/extension-image": "2.4.0",
+    "@tiptap/extension-link": "^2.4.0",
     "@tiptap/extension-table": "2.4.0",
     "@tiptap/extension-table-cell": "2.4.0",
     "@tiptap/extension-table-header": "2.4.0",
@@ -60,6 +59,10 @@
     "@tiptap/extension-text-align": "2.4.0",
     "@tiptap/extension-text-style": "2.4.0",
     "@tiptap/extension-underline": "2.4.0",
+    "@tiptap/react": "^2.4.0",
+    "@tiptap/starter-kit": "^2.4.0",
+    "prismjs": "^1.29.0",
+    "react-simple-code-editor": "^0.13.1",
     "video.js": "^8.12.0"
   }
 }
