--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -33,7 +33,7 @@
   },
   "prettier": "@homarr/prettier-config",
   "dependencies": {
-    "@mantine/form": "^7.9.2"
+    "@mantine/form": "^7.9.2",
     "@homarr/validation": "workspace:^0.1.0",
     "@homarr/translation": "workspace:^0.1.0"
   }
