--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -33,6 +33,7 @@
     "@mantine/hooks": "^7.9.2",
     "@mantine/modals": "^7.9.2",
     "@mantine/tiptap": "^7.9.2",
+    "@homarr/server-settings": "workspace:^0.1.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.37.1",
     "@tanstack/react-query-devtools": "^5.37.1",
