--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -45,11 +45,13 @@
     "@xterm/addon-fit": "0.10.0",
     "@xterm/xterm": "^5.5.0",
     "chroma-js": "^2.4.2",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
     "flag-icons": "^7.2.1",
     "glob": "^10.3.15",
     "jotai": "^2.8.0",
+    "mantine-react-table": "2.0.0-beta.3",
     "next": "^14.2.3",
     "postcss-preset-mantine": "^1.15.0",
     "react": "18.3.1",
