feat: add analytics

--- a/apps/tasks/package.json
+++ b/apps/tasks/package.json
@@ -27,6 +27,7 @@
     "@homarr/redis": "workspace:^0.1.0",
     "@homarr/server-settings": "workspace:^0.1.0",
     "@homarr/validation": "workspace:^0.1.0",
+    "@homarr/analytics": "workspace:^0.1.0",
     "dotenv": "^16.4.5",
     "node-cron": "^3.0.3",
     "superjson": "2.2.1"
