refactor: Make weather widget scalable

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,8 +7,9 @@
   "typescript.tsdk": "node_modules\\typescript\\lib",
   "js/ts.implicitProjectConfig.experimentalDecorators": true,
   "cSpell.words": [
-    "superjson",
+    "cqmin",
     "homarr",
+    "superjson",
     "trpc"
   ]
 }
